--- a/test/fixtures/basic-app/index.html
+++ b/test/fixtures/basic-app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html FASTBOOT-ATTRIBUTES-FOR-HTML>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,19 +8,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <base href="/" />
-<!-- EMBER_CLI_FASTBOOT_TITLE --><!-- EMBER_CLI_FASTBOOT_HEAD -->
+
+    <!-- FASTBOOT_CONTENT_FOR_HEAD -->
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/fastboot-test.css">
 
-    
   </head>
-  <body>
-    <!-- EMBER_CLI_FASTBOOT_BODY -->
+  <body FASTBOOT-ATTRIBUTES-FOR-BODY>
+
+    <!-- FASTBOOT_CONTENT_FOR_BODY -->
 
     <script src="assets/vendor.js"></script>
     <script src="assets/fastboot-test.js"></script>
 
-    
   </body>
 </html>
